testdata/baselines/reference/submodule/conformance/jsdocParseDotDotDotInJSDocFunction.errors.txt
a.js(3,12): error TS7006: Parameter 'callback' implicitly has an 'any' type.
a.js(8,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?


==== a.js (2 errors) ====
    // from bcryptjs
    /** @param {function(...[*])} callback */
    function g(callback) {
               ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
        callback([1], [2], [3])
    }
    
    /**
     * @type {!function(...number):string}
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
     * @inner
     */
    var stringFromCharCode = String.fromCharCode;
    